--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -14,6 +14,8 @@
         </div>
     </header>
     
+    <TwoChoiceInput @bind-TwoChoiceVis="@choiceVis" YesBtnClick="@DeleteItems" NoBtnClick="@CloseChoiceDiv" Message="@choiceMsg"/>
+
     if (mediaTrashList.Count == 0)
     {
         <h1>Trash is empty</h1>
@@ -36,10 +38,14 @@
     private static List<MediaRow> mediaTrashList;
     private static List<string> selectedItems; //Stores all items (paths) user selected. If unchecked, removed from list.
 
+    private static string choiceVis;
+    private static string choiceMsg;
+    
     protected override void OnInitialized()
     {
         mediaTrashList = LoadMediaTrashTable();
         selectedItems = new List<string>(); //Reset on page load/refresh
+        choiceVis = "hidden";
     }
 
     [Inject] //https://code-maze.com/how-to-call-javascript-code-from-net-blazor-webassembly/
@@ -59,6 +65,7 @@
         foreach (string item in selectedItems)
             await JSRuntime.InvokeAsync<string>("removeCheck", item);
         selectedItems.Clear();
+        choiceVis = "hidden";
     }
     
     private async Task ImgClicked(string path)
@@ -84,10 +91,23 @@
         selectedItems.Clear();
     }
 
-    private async Task DeleteBtnClick()
+    //Show choice div
+    private static void DeleteBtnClick()
     {
-        //Delete ALL
-        if (selectedItems.Count == 0)
+        if (mediaTrashList.Count == 0) return;
+
+        choiceVis = "visible";
+        choiceMsg = selectedItems.Count switch
+        {
+            0 => "PERMANENTLY Delete Everything?",
+            1 => "PERMANENTLY Delete Selected Item?",
+            _ => "PERMANENTLY Delete Selected Items?"
+        };
+    }
+
+    private async void DeleteItems()
+    {
+        if (selectedItems.Count == 0) //Delete ALL
             foreach (MediaRow item in mediaTrashList) PermDeleteItem(item.path);
         else //Delete selected
         {
@@ -100,5 +120,11 @@
         await ClearChecks();
         mediaTrashList = LoadMediaTrashTable();
         selectedItems.Clear();
+    }
+
+    private void CloseChoiceDiv()
+    {
+        choiceVis = "hidden";
+        StateHasChanged();
     }
 }
