--- a/PSS/wwwroot/css/Settings.css
+++ b/PSS/wwwroot/css/Settings.css
@@ -1,20 +1,16 @@
-﻿#settingsdiv {
+#settings-div {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 500px;
     height: auto;
     border: 3px solid white;
-    margin: 0 auto 20px;
     padding: 20px 10px;
     border-radius: 20px;
 }
 
-.settingsh {
-    color: white;
-    font-family: 'Product Sans', serif;
-    text-align: center;
-    margin: 0;
-}
-
-.whitetext {
+#settings-div > div > span {
     color: white;
     font-family: 'Product Sans', serif;
     margin: 5px 0 0;
@@ -22,6 +18,6 @@
 }
 
 /*Span and input elements*/
-.settingpair {margin-top: 4px;}
+.settings-pair {margin-top: 4px;}
 
-div>button {margin-top: 10px;}
+div > button {margin-top: 10px;}
