--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -78,6 +78,11 @@
     private void RestoreBtnClick()
     {
         if (mediaTrashList.Count == 0) return;
+        if (PSS.Settings.showPrompts == false)
+        {
+            DeleteItems();
+            return;
+        }
 
         yesBtnFunc = RestoreItems;
         
@@ -113,6 +118,11 @@
     private void DeleteBtnClick()
     {
         if (mediaTrashList.Count == 0) return;
+        if (PSS.Settings.showPrompts == false)
+        {
+            DeleteItems();
+            return;
+        }
 
         yesBtnFunc = DeleteItems;
 
