I think every page should have a unique title now

--- a/PSS/App.razor
+++ b/PSS/App.razor
@@ -4,11 +4,8 @@
     </Found>
     <NotFound>
         <LayoutView Layout="@typeof(MainLayout)">
-            <div class="centeredDiv">
-                <h1 class="centeredWhiteText">404. That's an error.</h1>
-                <p class="centeredWhiteText">The requested URL was not found.</p>
-                <a class="centeredBlueText " href="/"> Click me to go to the home page.</a>
-            </div>
+            <title>404</title>
+            <Error/>
         </LayoutView>
     </NotFound>
 </Router>
