--- a/PSS/Pages/AlbumsMain.razor
+++ b/PSS/Pages/AlbumsMain.razor
@@ -2,6 +2,7 @@
 @page "/albums"
 @using static PSS.Backend.Connection
 
+<title>Albums</title>
 <link href="css/AlbumsMain.css" rel="stylesheet">
 
 <header>
