--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -2,6 +2,7 @@
 @inject NavigationManager navigationManager;
 @using static PSS.Backend.Connection
 
+<title>Photos</title>
 <link href="css/IndexNew.css" rel="stylesheet"/>
 
 @{
