--- a/PSS/Pages/UploadApply.razor
+++ b/PSS/Pages/UploadApply.razor
@@ -3,6 +3,7 @@
 @using System.Globalization
 @using PSS.Backend
 
+<title>Apply Upload</title>
 <link href="css/UploadApply.css" rel="stylesheet">
 
 <header>
