--- a/PSS/Pages/AlbumView.razor
+++ b/PSS/Pages/AlbumView.razor
@@ -3,6 +3,7 @@
 @using static PSS.Backend.Connection
 @using PSS.Backend
 
+<title>@albumName</title>
 <link href="css/AlbumView.css" rel="stylesheet">
 
 @{
