--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -2,6 +2,7 @@
 @inject NavigationManager navigationManager;
 @using static PSS.Backend.Connection
 
+<title>Trash</title>
 <link href="css/Trash.css" rel="stylesheet"/>
 
 @{
