--- a/PSS/Shared/ViewItem.razor
+++ b/PSS/Shared/ViewItem.razor
@@ -13,6 +13,7 @@ Required Parameters:
 @using PSS.Backend
 @inject NavigationManager navigationManager;
 
+<title>View</title>
 <link href="/css/ViewItem.css" rel="stylesheet"/>
 
 @{
