Delete old Index.css file and rename IndexNew to just Index

--- a/PSS/Pages/Index.razor
+++ b/PSS/Pages/Index.razor
@@ -3,7 +3,7 @@
 @using static PSS.Backend.Connection
 
 <title>Photos</title>
-<link href="css/IndexNew.css" rel="stylesheet"/>
+<link href="css/Index.css" rel="stylesheet"/>
 
 @{
     <header style="visibility: @headerVis">
