--- a/PSS/Shared/Error.razor
+++ b/PSS/Shared/Error.razor
@@ -1,5 +1,28 @@
-﻿<div class="centeredDiv">
-    <h1 class="centeredWhiteText">404. That's an error.</h1>
-    <p class="centeredWhiteText">The requested URL was not found.</p>
-    <a class="centeredBlueText " href="/"> Click me to go to the home page.</a>
+﻿<style>
+    #centeredDiv {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin: -140px 0 0 -150px;
+    }
+    
+    #centeredDiv > h1, #centeredDiv > p {
+        color: white;
+        font-family: 'Product Sans', sans-serif;
+        text-align: center;
+    }
+    
+    #centeredDiv > a {
+        font-family: 'Product Sans', sans-serif;
+        color: rgb(2, 97, 255);
+        margin: auto;
+        text-align: center;
+        display: block; /*https://stackoverflow.com/questions/42669981/text-align-center-not-working-on-a-but-does-on-h1*/
+    }
+</style> 
+
+<div id="centeredDiv">
+    <h1>404. That's an error.</h1>
+    <p>The requested URL was not found.</p>
+    <a href="/"> Click me to go to the home page.</a>
 </div>
