using actually right func now

--- a/PSS/Pages/Trash.razor
+++ b/PSS/Pages/Trash.razor
@@ -81,7 +81,7 @@
         if (mediaTrashList.Count == 0) return;
         if (PSS.Settings.showPrompts == false)
         {
-            DeleteItems();
+            RestoreItems();
             return;
         }
 
