cant get alt left arrow to work so use B to go back in ViewItem

--- a/PSS/Shared/ViewItem.razor
+++ b/PSS/Shared/ViewItem.razor
@@ -164,7 +164,7 @@ Required Parameters:
 
     private void ChangeImage(KeyboardEventArgs e)
     {
-        if (e.AltKey && e.Code == "LeftArrow")
+        if (e.Code == "KeyB")
         {
             navigationManager.NavigateTo(ReturnPath, true);
             return;
